@@ -2,6 +2,7 @@ package org.prebid.server.hooks.modules.id5.userid.v1.model;
 
 import com.iab.openrtb.request.Eid;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -14,6 +15,6 @@ public record FetchResponse(Map<String, UserId> ids) {
     public List<Eid> toEids() {
         return Optional.ofNullable(ids)
                 .map(userIds -> userIds.values().stream().map(UserId::eid).toList())
-                .orElse(List.of());
+                .orElse(Collections.emptyList());
     }
 }
